# TheEngine2

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile
examples/: .ycm_extra_conf.py  BasicLogSample.cpp  BasicMeshSample.cpp  BasicRenderingSample.cpp  BasicShaderSample.cpp  CMakeLists.txt  CommonUtil.h  ExtensionLoadingAndDebugOutput.cpp  Geometry.h  TemplateUtilitiesSamples.cpp  Textures.h  WindowCreation.cpp  WindowInputHandler.cpp
examples/BasicRenderingSample/: Camera.h  Geometry.h  Mesh.h  Shaders.h
examples/RenderingSample/: Camera.h  ImageLoader.h  Include.h  InputHandler.h  Materials.h  RenderObject.h  RenderingSample.cpp  Shaders.h  Util.h  main.cpp
include/: Config.h  EngineForwardDeclares.h  EngineInc.h  Macro.h
include/core/: Algorithm.hpp  Debug.h  POD.h  StringExt.h  StringUtil.h  TByteBufferExt.h  TypeUtilities.h  TypeUtils.h
include/core/memory/: Memory.h
include/engine/: IEngineContext.h
include/filesystem/: FileSystemInc.h  IFileReader.h  IFileSystem.h  IFileWriter.h  Path.h  PathExt.h  PathUtil.h
include/geometry/: SimpleGeometry.h
include/gui/: IGui.h
include/input/: IInputDevice.h  InputFwd.h  InputHandler.h  InputHandlerHandle.h  InputInc.h  InputMapping.h
include/log/: DefaultCoutLogPipe.h  ELogSeverity.h  ELogSource.h  ILogPipe.h  ILogStream.h  Log.h  LogInc.h
include/platform/: IPlatformFileSystem.h
include/render/: AnimatedMesh.h  BaseMaterial.h  BaseMesh.h  BufferDescriptor.h  CFrameBufferObject.h  CRenderBufferObject.h  CTexture.h  ICamera.h  IFrameBufferObject.h  IGpuBufferArrayObject.h  IGpuBufferObject.h  IGpuProgram.h  IGpuProgramUniform.h  IProgram.h  IRenderBufferObject.h  IRenderContext.h  IRenderExtensionLoader.h  IRenderer.h  IRendererDebugMessage.h  IRendererDebugMessageMonitor.h  ITexture.h  Image.h  MeshRenderMode.h  OpenGL.h  OrbitCamera.cpp  OrbitCamera.h  PerspectiveCamera.h  RenderFwd.h  RenderInc.h
include/render/animation/: Animation.h  AnimationController.h  AnimationFwd.h  Armature.h  Bone.h  BoneKeyCollection.h
include/render/debug/: DebugLineMesh.h  DebugRenderer.h
include/resource_management/: GpuProgramManager.h  ImageLoader.h  ResourceManagementFwd.h  ResourceManagementInc.h  ResourceManager.h
include/resource_management/mesh/: AssimpImport.h  IQMLoader.h  MBDBone.h  MBDLoader.h
include/util/: Assert.h  ChromeTraceLogWriter.h  Profiler.h  Timer.h
include/utils/: Math.h
include/window/: IWindow.h  IWindowModule.h  SWindowDefinition.h  WindowInc.h
src/core/: StringExt.cpp  StringUtil.cpp
src/engine/: EngineContext.cpp  EngineContext.h
src/filesystem/: FileReader.cpp  FileReader.h  FileSystem.cpp  FileSystem.h  FileWriter.cpp  FileWriter.h  PathExt.cpp  PathUtil.cpp
src/gui/: GuiImpl.cpp  GuiImpl.h  ImGuiEventHandler.h  ImGuiGlfwEventHandler.cpp  imgui_gl3_impl.cpp  imgui_gl3_impl.h  imgui_impl.cpp  imgui_impl.h
src/input/: InputHandlerHandle.cpp  InputMapping.cpp
src/log/: LogImpl.cpp
src/platform/: LinuxFileSystem.cpp  LinuxFileSystem.h  WindowsFileSystem.cpp  WindowsFileSystem.h
src/render/: AnimatedMesh.cpp  BaseMaterial.cpp  BaseMesh.cpp  GLBindingInc.h  GLExtensionLoader.cpp  GLExtensionLoader.h  GLFrameBufferObject.cpp  GLFrameBufferObject.h  GLGpuBufferArrayObject.cpp  GLGpuBufferArrayObject.h  GLGpuBufferObject.cpp  GLGpuBufferObject.h  GLGpuShaderProgram.cpp  GLGpuShaderProgram.h  GLGpuShaderProgramUniform.cpp  GLGpuShaderProgramUniform.h  GLProgram.cpp  GLProgram.h  GLRenderBufferObject.cpp  GLRenderBufferObject.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderer.cpp  GLRenderer.h  GLRendererDebugMessage.cpp  GLRendererDebugMessage.h  GLRendererDebugMessageMonitor.cpp  GLRendererDebugMessageMonitor.h  GLTexture.cpp  GLTexture.h  OpenGL.hpp  OpenGLRender.hpp  OrbitCamera.cpp  PerspectiveCamera.cpp  RenderContext.cpp  RenderContext.h  StubDebugMessageMonitor.h
src/render/animation/: AnimationController.cpp  BoneKeyCollection.cpp
src/render/debug/: DebugLineMesh.cpp  DebugRenderer.cpp
src/resource_management/: GpuProgramManager.cpp  ImageLoader.cpp  ResourceManager.cpp
src/resource_management/mesh/: AssimpImport.cpp  IQM.h  IQMLoader.cpp  MBDLoader.cpp
src/util/: Timer.cpp
src/window/: DefaultWindowModule.cpp  DefaultWindowModule.h  GLFWInputDevice.cpp  GLFWInputDevice.h  GLFWInputKeyMap.h  GLFWWindow.cpp  GLFWWindow.h
test/: .ycm_extra_conf.py  CMakeLists.txt  build.py
test/core/: StringExtensionTests.cpp
test/filesystem/: Common.h  FileSystemTest.cpp  PathTest.cpp
test/testdata/: TestReadFile.txt
tools/blender/addons/: .env  iqm_bone_export.py  iqm_export.py
